# NitroCppTest-SeanMcGoff

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  json.cpp  json.h  main.cpp  rectangle.cpp  rectangle.h
test/: CMakeLists.txt  test.cpp
test/json/: test-json.cpp
test/rectangle/: test-rectangle.cpp
